--- a/FIT5032_Assignment.Tests/packages.config
+++ b/FIT5032_Assignment.Tests/packages.config
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
 </packages>
