--- a/FIT5032_Assignment/FIT5032_Assignment.csproj
+++ b/FIT5032_Assignment/FIT5032_Assignment.csproj
@@ -249,6 +249,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="CustomerJsCss\css.css" />
+    <Content Include="CustomerJsCss\JavaScript.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
