--- a/FIT5032_Assignment/FIT5032_Assignment.csproj
+++ b/FIT5032_Assignment/FIT5032_Assignment.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="App_Start\EmailService.cs" />
+    <Compile Include="Utils\CustomValidationAttributes.cs" />
     <Compile Include="Utils\EmailSender.cs" />
   </ItemGroup>
   <ItemGroup>
