add Authorize for some view

--- a/FIT5032_Assignment/FIT5032_Assignment.csproj
+++ b/FIT5032_Assignment/FIT5032_Assignment.csproj
@@ -309,6 +309,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\PatientStyle.css" />
     <Content Include="CustomerJsCss\Appointment.js" />
     <Content Include="CustomerJsCss\css.css" />
     <Content Include="CustomerJsCss\feedback.js" />
