show chart on the index of clinic

--- a/FIT5032_Assignment/FIT5032_Assignment.csproj
+++ b/FIT5032_Assignment/FIT5032_Assignment.csproj
@@ -282,6 +282,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DataPoint.cs" />
     <Compile Include="Models\Entites\EmialViewModel.cs" />
     <Compile Include="Models\Entites\Appointment.cs" />
     <Compile Include="Models\Entites\Clinic.cs" />
