--- a/FIT5032_Assignment.Tests/packages.config
+++ b/FIT5032_Assignment.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
+  <package id="itextsharp.xmlworker" version="5.5.13.3" targetFramework="net48" />
   <package id="jQuery" version="1.6.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.4" targetFramework="net48" />
