--- a/FIT5032_Assignment/packages.config
+++ b/FIT5032_Assignment/packages.config
@@ -23,7 +23,17 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Http" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
@@ -37,10 +47,16 @@
   <package id="Microsoft.TypeScript.MSBuild" version="5.2.2" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="OpenAI" version="1.7.2" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="SendGrid" version="9.28.1" targetFramework="net48" />
   <package id="starkbank-ecdsa" version="1.3.3" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="TinyMCE" version="6.7.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
