fixbug, update for feedbackandrating

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/FIT5032_Assignment/Uploads/a5b352ad-eb4b-4fe0-8d9a-99702f3f7fb4.png
+/FIT5032_Assignment/Uploads/f73a52ed-f676-4d51-8427-c85bf728ccce.png
