--- a/FIT5032_Assignment.Tests/packages.config
+++ b/FIT5032_Assignment.Tests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
+  <package id="EPPlus" version="6.2.10" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
   <package id="itextsharp.xmlworker" version="5.5.13.3" targetFramework="net48" />
   <package id="jQuery" version="1.6.4" targetFramework="net48" />
@@ -13,6 +16,7 @@
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net48" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net48" />
