--- a/FIT5032_Assignment/packages.config
+++ b/FIT5032_Assignment/packages.config
@@ -4,6 +4,9 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="EPPlus" version="6.2.10" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
   <package id="itextsharp.xmlworker" version="5.5.13.3" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
@@ -34,6 +37,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
